--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -253,3 +253,16 @@ Mechanic.",
   pages   = "141-160",
   year    = "1990",
   }
+  
+@article{alazard,
+  title   = "A minicourse on the low Mach number limit",
+  author  = "T. Alazard",
+  journal = "Discrete and Continuous Dynamical Systems - Series S",
+  volume  = "1",
+  publisher = "American Insitute of Mathematical Sciences",
+  issue   = "3",
+  pages   = "365-404",
+  year    = "2008",
+  }
+
+  
