modified the table and added reference

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -265,4 +265,12 @@ Mechanic.",
   year    = "2008",
   }
 
+@article{abgrall,
+  title   = "Discrete equations for physical and numerical compressible multiphase mixtures",
+  author  = "R Abgrall and R Saurel",
+  journal = "Journal of Computational Physics",
+  volume  = "186",
+  pages   = "361-396",
+  year    = "2003",
+  }
   
