--- a/low_mach.tex
+++ b/low_mach.tex
@@ -877,7 +877,7 @@ $\rho_{\text{left}}$ & $u_{\text{left}}$ & $P_{\text{left}}$ & $\rho_{\text{righ
 \multicolumn{6}{ |c| }{Leblanc shock tube (\sct{sec:Leblanc})}                       \\ \hline
 1 & 0 & $4$ $10^{-2}$ & $10^{-3}$ & 0 & $4$ $10^{-11}$                               \\ \hline \hline
 \multicolumn{6}{ |c| }{Strong shock for liquid phase (\sct{sec:liquid_shock})}       \\ \hline
-$1$ & $0$ & $4$ $10^{-4}$ & $10^{-3}$ & $0$ & $4$ $10^{-11}$                         \\ \hline
+$1000$ & $0$ & $10^{9}$ & $1000$ & $0$ & $10^{5}$                         \\ \hline
 \multicolumn{6}{ |c| }{Slow moving shock (\sct{sec:slow_moving_shock})}              \\ \hline \hline
 $1$ & $-0.81$ & $1$ & $3.86$ & $-3.44$ & $10.33$                                     \\ \hline
 \end{tabular}
@@ -1204,7 +1204,7 @@ $6400$&$7.3309974$ $10^{-4}$    & $0.53343397$ & $4.4545754$ $10^{-4}$ & $0.4939
 %\tcr{until now, you never gave the mu and kappa coefficients, yet they are now different due to their different normalizations.
 %Maybe very little for the previous cases, but we need to mention something because, in this section, you show both, and it is better
 %to say something than to let the reviewers wonder ... } \tcb{what do you think of the following?}
-The purpose of this test is to investigate the ability of the entropy viscosity method to stabilize a strong shock with a small Mach number: the Mach number in the shock region is of the order of $0.1$. In this case, as explained in \sct{sec:lowMach}, the viscosity coefficients are required to have different order of magnitude in order to ensure the correct scaling of the dissipative terms. This test will allow to validate our approach discussed in \sct{sec:lowMach}.  
+The purpose of this test is to investigate the ability of the entropy viscosity method to stabilize a strong shock with a small Mach number \cite{abgrall}: the Mach number in the shock region is of the order of $0.1$. In this case, as explained in \sct{sec:lowMach}, the viscosity coefficients are required to have different order of magnitude in order to ensure the correct scaling of the dissipative terms. This test will allow to validate our approach discussed in \sct{sec:lowMach}.  
 
 The stiffened gas equation of state is used to model a liquid flow with the parameters given in \tbl{tbl:stff_gas_eos}. The computational domain of length $L=1m$ is uniformly discretized using 500 cells. The step initial conditions are given in \tbl{tbl:ic_1d_tests}.
 %
